Kubernetes/Networking/ingress-ssl.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress-ssl
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Force HTTPS redirect
spec:
  tls:
  - hosts:
    - app.sieger.com.ng
    secretName: app.sieger.com.ng-tls
  ingressClassName: nginx
  rules:
  - host: app.sieger.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: next-service
            port: 
              number: 80
  # - host: vue.sieger.com.ng
  #   http:
  #     paths:
  #     - path: /(.*)
  #       pathType: ImplementationSpecific
  #       backend:
  #         service:
  #           name: vue-service
  #           port: 
  #             number: 80
