Kubernetes/Networking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  # namespace: django-postgres
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: app.sieger.com.ng
    http:
      paths:
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: next-service
            port:
              number: 80
